tests/manual/dialogs/filedialogpanel.cpp
@@ -84,6 +84,7 @@ FileDialogPanel::FileDialogPanel(QWidget *parent)
     , m_resolveSymLinks(new QCheckBox(tr("Resolve symlinks")))
     , m_native(new QCheckBox(tr("Use native dialog")))
     , m_customDirIcons(new QCheckBox(tr("Don't use custom directory icons")))
+    , m_noIconProvider(new QCheckBox(tr("Null icon provider")))
     , m_acceptMode(createCombo(this, acceptModeComboData, sizeof(acceptModeComboData)/sizeof(FlagData)))
     , m_fileMode(createCombo(this, fileModeComboData, sizeof(fileModeComboData)/sizeof(FlagData)))
     , m_viewMode(createCombo(this, viewModeComboData, sizeof(viewModeComboData)/sizeof(FlagData)))
@@ -111,6 +112,7 @@ FileDialogPanel::FileDialogPanel(QWidget *parent)
     optionsLayout->addRow(m_resolveSymLinks);
     optionsLayout->addRow(m_readOnly);
     optionsLayout->addRow(m_customDirIcons);
+    optionsLayout->addRow(m_noIconProvider);
 
     // Files
     QGroupBox *filesGroupBox = new QGroupBox(tr("Files / Filters"));
@@ -415,12 +417,19 @@ void FileDialogPanel::restoreDefaults()
         l->restoreDefault(&d);
 }
 
-void FileDialogPanel::applySettings(QFileDialog *d) const
+void FileDialogPanel::applySettings(QFileDialog *d)
 {
     d->setAcceptMode(comboBoxValue<QFileDialog::AcceptMode>(m_acceptMode));
     d->setViewMode(comboBoxValue<QFileDialog::ViewMode>(m_viewMode));
     d->setFileMode(comboBoxValue<QFileDialog::FileMode>(m_fileMode));
     d->setOptions(options());
+    if (m_noIconProvider->isChecked()) {
+        m_origIconProvider = d->iconProvider();
+        d->setIconProvider(nullptr);
+    } else if (m_origIconProvider) {
+        d->setIconProvider(m_origIconProvider);
+    }
+
     d->setDefaultSuffix(m_defaultSuffix->text().trimmed());
     const QString directory = m_directory->text().trimmed();
     if (!directory.isEmpty())
